fix: better blurred header

--- a/app/(articles)/header.css
+++ b/app/(articles)/header.css
@@ -1,18 +1,9 @@
 
 .article-header {
-  backdrop-filter: blur(10px);
-  mask: linear-gradient(180deg, #000000 50%, transparent 100%);
-  -webkit-mask: linear-gradient(180deg, #000000 50%, transparent 100%);
-}
+  --limit: 50%;
+  --blur: 5px;
 
-.article-header::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 70%;
-  background: var(--background);
-  mask: linear-gradient(180deg, #000000 60%, transparent 100%);
-  -webkit-mask: linear-gradient(180deg, #000000 60%, transparent 100%);
+  background: linear-gradient(to top,transparent,var(--background));
+  mask-image: linear-gradient(to bottom,var(--background) var(--limit),transparent);
+  backdrop-filter: blur(var(--blur));
 }
